xkb: support converting Qt keys to keysyms

QXkbCommon::toKeysym doesn't correctly handle the case where a single Qt
key map to multiple keysyms.

BUG: 482847


(cherry picked from commit 09d4f3fda3e381c016605092f773af994ba4d7f0)