autotests/test_xkb.cpp
@@ -19,6 +19,8 @@ class XkbTest : public QObject
 private Q_SLOTS:
     void testToQtKey_data();
     void testToQtKey();
+    void testFromQtKey_data();
+    void testFromQtKey();
 };
 
 // from kwindowsystem/src/platforms/xcb/kkeyserver.cpp
@@ -496,6 +498,30 @@ void XkbTest::testToQtKey()
     Xkb xkb;
     QFETCH(xkb_keysym_t, keySym);
     QTEST(xkb.toQtKey(keySym), "qt");
+}
+
+void XkbTest::testFromQtKey_data()
+{
+    QTest::addColumn<xkb_keysym_t>("keySym");
+    QTest::addColumn<int>("keyQt");
+    for (std::size_t i = 0; i < sizeof(g_rgQtToSymX) / sizeof(TransKey); i++) {
+        const QByteArray row = QByteArray::number(g_rgQtToSymX[i].keySymX, 16);
+        QTest::newRow(row.constData()) << g_rgQtToSymX[i].keySymX << (g_rgQtToSymX[i].keySymQt | g_rgQtToSymX[i].modifiers).toCombined();
+    }
+}
+
+void XkbTest::testFromQtKey()
+{
+    Xkb xkb;
+    QFETCH(xkb_keysym_t, keySym);
+    QFETCH(int, keyQt);
+    QList<xkb_keysym_t> keys = xkb.keysymsFromQtKey(keyQt);
+
+    QEXPECT_FAIL(QByteArray::number(XKB_KEY_Hyper_L, 16), "keysymsFromQtKey doesn't map hyper to meta", Continue);
+    QEXPECT_FAIL(QByteArray::number(XKB_KEY_Hyper_R, 16), "keysymsFromQtKey doesn't map hyper to meta", Continue);
+    QEXPECT_FAIL(QByteArray::number(XKB_KEY_KP_Equal, 16), "KP_Equal is not correctly identified as keypad key in Qt 6.7.0; fixed in 6.7.1: https://codereview.qt-project.org/c/qt/qtbase/+/546889", Continue);
+
+    QVERIFY(keys.contains(keySym));
 }
 
 QTEST_MAIN(XkbTest)
